committing improved personal site changes

--- a/Challenge1/index.html
+++ b/Challenge1/index.html
@@ -7,23 +7,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="css/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=The+Nautigal&display=swap" rel="stylesheet">
     <title>Lovely Sharma</title>
 </head>
 
 <body>
     <div class="top-container">
-        <img src="images/cloud.png" alt="clouds">
+        <img class="top-cloud" src="https://cdn-icons-png.flaticon.com/512/414/414927.png" alt="clouds">
         <h1>I'm Lovely</h1>
-        <p>A programmer</p>
-        <img src="images/cloud.png" alt="clouds">
+        <p class="text-programmer">A <span>Pro</span>grammer</p>
+        <img class="bottom-cloud" src="https://cdn-icons-png.flaticon.com/512/414/414927.png" alt="clouds">
         <img src="images/mountain.png" alt="clouds">
     </div>
-    <div class="mid-container">
-
+    <div class="middle-container">
+        <div class="profile">
+            <img class="profile-img" src="images/photo.png" alt="profile picture">
+            <h2>Hello.</h2>
+            <p>I am a Web and App Developer, I love programming and cold coffee. Have handfull of experience with major
+                industry level projects. </p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="code-img"
+                    src="https://cdn-icons.flaticon.com/png/512/1329/premium/1329016.png?token=exp=1642082103~hmac=335e88a2aa912f81538d8ba18479c8b1"
+                    alt="">
+                <h3>Design & Development</h3>
+                <p>A desinger and developer working hard to stand out of the crowd. I started programming in my 16s
+                    because i wanted to know how games are made and overtime i gained a lot of experience.</p>
+            </div>
+            <div class="skill-row">
+                <img class="challenge-img"
+                    src="https://cdn-icons.flaticon.com/png/512/3227/premium/3227056.png?token=exp=1642082218~hmac=fc0d55feaab76f8e15752b0090319153"
+                    alt="">
+                <h3>Challenges</h3>
+                <p>The greater the obstacle, the more glory in overcoming it. Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+            <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat Phasellus sodales, tellus donec dui, ornare erat.</p>
+            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
     </div>
+
+
     <div class="bottom-container">
-
+        <a class="footer-link" href="https://www.linkedin.com/in/lovely-sharma-a54022214/">LinkedIn</a>
+        <a class="footer-link" href="https://github.com/CoderLovely08">Github</a>
+        <a class="footer-link" href="https://www.instagram.com/lovely_sharma0812/">Instagram</a>
+        <p class="copyright">© 2018 Name Surname.</p>
     </div>
+
 
 </body>
 
